force-app/main/default/objects/Case/fields/delete260708__c.field-meta.xml
<CustomField>
    <fullName>delete260708__c</fullName>
    <label>delete260708</label>
    <length>100</length>
    <type>Text</type>
</CustomField>