force-app/main/default/objects/Case/fields/Merge_Conflict__c.field-meta.xml
<CustomField>
    <fullName>Merge_Conflict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Merge Conflict</label>
    <type>Checkbox</type>
</CustomField>