force-app/main/default/objects/Case/fields/Optional_Comment__c.field-meta.xml
<CustomField>
    <fullName>Optional_Comment__c</fullName>
    <label>Optional Comment</label>
    <length>160</length>
    <type>Text</type>
</CustomField>